[gd_scene load_steps=4 format=3 uid="uid://nt0ls1a3s5aq"]

[ext_resource type="Script" path="res://Helper/helper_merchant.gd" id="1_fgg0x"]
[ext_resource type="Texture2D" uid="uid://cj508btj4nl0b" path="res://Textures/Helper/helper_merchant.png" id="1_pa6rf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qgan3"]

[node name="HelperMerchant" type="Area2D"]
script = ExtResource("1_fgg0x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pa6rf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qgan3")

[node name="MerchantLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -2.0
offset_top = -34.0
offset_right = 252.0
offset_bottom = -11.0
text = "I've probably got all sorts of stuff"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
